[project]
name = "linearmoney"
dynamic = ["version"]
description = "Full multi-currency support for python."
authors = [{name = "GrammAcc", email = "grammaticallyacceptable@grammacc.dev"}]
maintainers = [{name = "GrammAcc", email = "grammaticallyacceptable@grammacc.dev"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["money", "framework", "currency", "forex", "fintech"]
classifiers = ["Development Status :: 3 - Alpha"]

[project.urls]
homepage = "https://github.com/GrammAcc/linearmoney"
bug_tracker = "https://github.com/GrammAcc/linearmoney/issues"
documentation = "https://grammacc.github.io/linearmoney"
repository = "https://github.com/GrammAcc/linearmoney"

[project.optional-dependencies]
dev = [
    "tox>=4.6.4",
    "pytest",
    "pytest-parametrize-cases",
    "pytest-lazy-fixtures",
]

[tool.hatch.version]
path = "src/linearmoney/__init__.py"


[tool.hatch.build]
ignore-vcs = true
include = ["*.json", "py.typed"]


# See https://github.com/pypa/hatch/issues/981#issuecomment-1743631364
[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/linearmoney"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_file="testsuite.log"
log_file_level="DEBUG"
addopts = "--import-mode=importlib --show-capture=no --ignore=cldr-json"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
omit = [
    "_utils.py",
]

[tool.coverage.run]
source = ["linearmoney"]
